Layout para 768px teminado

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             <div class="anuncio__banner">
                 <div class="alunos">
                     <img src="images/avatars.svg" alt="Fotos dos alunos eFront">
-                    <p>Junta-se a +10.000 alunos</p>
+                    <p class="alunos__texto">Junta-se a +10.000 alunos</p>
                 </div>
-                <h1>Comece a estudar <span>frontend</span> do zero com uma linguagem simples</h1>
-                <p>Trabalhe de casa, usando as tecnologias mais requisitados do mercado frontend.</p>
+                <div class="anuncio__infos">
+                    <h1 class="anuncio__titulo">Comece a estudar <span>frontend</span> do zero com uma linguagem simples</h1>
+                    <p class="anuncio__texto">Trabalhe de casa, usando as tecnologias mais requisitados do mercado frontend.</p>
+                </div>
             </div>
 
             <div class="anuncio__preco">
@@ -42,7 +44,7 @@
                     <p class="anuncio__valor-novo">R$ 10,00</p>
                 </div>
                 <div class="anuncio__pagamento">
-                    <a href="#">Quero comprar agora</a>
+                    <a href="#" class="pagamento__botao">Quero comprar agora</a>
                     <p>Cartão de crédito, Boleto à vista, PayPal e Pix</p>
                 </div>
             </div>
