--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>eFront</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,7 +36,7 @@
             </h1>
             <p class="anuncio__texto">
               Trabalhe de casa, usando as tecnologias mais requisitados do
-              mercado frontend.
+              mercado front-end.
             </p>
           </div>
         </div>
